# chud

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  README.org
.github/workflows/: static.yml
examples/chud-ui/: Cargo.toml  Makefile.toml
examples/chud-ui/src/: main.rs
fixtures/: schema.ipldsch
src/: lib.rs  main.rs
src/captcha/: mod.rs
src/crypto/: hash.rs
src/net/: behavior.rs  client.rs  mod.rs  msg.rs  req.rs  sync.rs
src/rpc/: cmd.rs  mod.rs
src/sys/: mod.rs  msg.rs  rt.rs
src/util/: mod.rs
tests/: web.rs
