[package]
name = "chud"
version = "0.1.0"
edition = "2021"

[lib]
name = "chud"
path = "src/lib.rs"

[[bin]]
name = "chudd"
path = "src/main.rs"

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = ["macros", "noise", "wasm-bindgen", "floodsub", "rendezvous", "kad", "identify", "request-response", "ping"] }
libp2p-mplex = { git = "https://github.com/libp2p/rust-libp2p.git" }
libp2p-request-response = { git = "https://github.com/libp2p/rust-libp2p.git", features = ["cbor"] }
libp2p-autonat = { git = "https://github.com/libp2p/rust-libp2p.git" }
blake3 = "1.4.0"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"] }
captcha-rs = "0.2.10"
indexed_db_futures = "0.3.0"
web-sys = { version = "0.3.64", features = ["IdbFactory", "Window"] }
js-sys = { version = "0.3.64" }
wasm-bindgen = "0.2.87"
serde-wasm-bindgen = "0.5.0"
async-std = { version = "1.12.0", features = ["attributes"] }
rand = "0.8.5"
futures = "0.3.28"
async-channel = "1.8.0"
wasm-bindgen-futures = "0.4.37"
hex = "0.4.3"
log = "0.4.19"
lazy_static = "1.4.0"
instant = "0.1"
wasm-timer = "0.2.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.28.2", features = ["fs", "io-util", "rt", "macros", "rt-multi-thread", "time"] }
libp2p = { git = "https://github.com/libp2p/rust-libp2p.git", features = ["macros", "noise", "wasm-bindgen", "floodsub", "rendezvous", "kad", "identify", "tokio", "websocket", "tcp", "request-response", "ping"] }
env_logger = "0.10.0"
clap = { version = "4.3.4", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
libp2p-websys-transport = { git = "https://github.com/dowlandaiello/libp2p-websys-transport.git" }
tokio = { version = "1.28.2", features = ["time"] }
wasm-logger = "0.2.0"
instant = { verion = "0.1", features = ["wasm-bindgen"] }

[patch.crates-io]
libp2p-core = { git = "https://github.com/libp2p/rust-libp2p.git" }

[dev-dependencies]
wasm-bindgen-test = "0.3.0"
leptos = "0.3.1"
